[package]
name = "rsos"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.10.0"
uart_16550 = "0.3.2"
x86_64 = "0.15.2"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-timeout = 5 # in seconds
test-success-exit-code = 33 # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false


[[test]]
name = "stack_overflow"
harness = false
